src/app/qr-form/qr-form.component.css
#qr-form {
	display: flex;
	flex-flow: column;
	align-items: center;
	justify-content: center;
	gap: 20px 0;

	--qr-form-padding: 20px;
	height: calc(100vh - var(--mat-toolbar-standard-height) - 2 * var(--qr-form-padding));
	padding: var(--qr-form-padding) 0;
}

#qr-form form {
	width: 50%;
}

#qr-form form mat-form-field {
	width: 100%;
}

#qr-form #canvas-container {
	display: flex;
	justify-content: center;
}

#qr-form canvas {
	min-width: 200px;
	min-height: 200px;
}

#qr-form #download-buttons {
	display: flex;
	justify-content: center;
	gap: 10px;
}

@media screen and (max-width: 768px) {
	#qr-form {
		height: unset;
	}

	#qr-form form {
		width: 100%;
	}

	#qr-form form mat-form-field {
		--margin: 25px;
		width: calc(100% - 2 * var(--margin));
		margin: 0 var(--margin);
	}

	#qr-form #download-buttons {
		flex-wrap: wrap;
	}
}

